Prepare core 1.0.0-dev11 hardening
